# algorithms-from-scratch

./: .gitignore  main.py  pyproject.toml
ganai_models/: bert.ipynb  bert_hf.ipynb  llama2.ipynb  transformer.ipynb
llm_finetuning/: lora.ipynb
ml_algorithms/decision_tree/: dectree_classifier.py  dectree_regressor.py
ml_algorithms/linear_regression/: linear_regression.py  linear_regression_tests.py
ml_algorithms/logistic_regression/: logistic_regression.py  logistic_regression_tests.py
ml_algorithms/naive_bayes/: gaussian_naive_bayes.py
pytorch/: sequence_packing.ipynb
